# Chess

./: .gitignore  CMakeLists.txt  README.md
Work/: Game.cpp  Game.h  Network.cpp  Network.h  StockFish.cpp  StockFish.h
WorkTMP/: Game.cpp  Network.cpp
